각종 오류 수정

--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -40,6 +40,10 @@ header {
 					font: normal 16px/1 'Bebas Neue';
 					color: #222;
 					letter-spacing: 2px;
+
+					&:hover {
+						color: #6fd885;
+					}
 				}
 			}
 		}
