--- a/src/scss/main/_men.scss
+++ b/src/scss/main/_men.scss
@@ -2,6 +2,8 @@
 	width: 100%;
 	height: 100vh;
 	padding: 150px 0 50px;
+	margin-bottom: 200px;
+	overflow: hidden;
 
 	.inner {
 		width: 1180px;
@@ -22,6 +24,14 @@
 				right: 0;
 				top: 0;
 				writing-mode: vertical-rl;
+			}
+			h2 {
+				font: 30vw/1 'Bebas Neue';
+				color: rgba(238, 238, 238, 0.4);
+				position: absolute;
+				left: 0;
+				bottom: 0;
+				z-index: -1;
 			}
 
 			article {
@@ -100,6 +110,10 @@
 					left: 0;
 					writing-mode: horizontal-tb;
 				}
+				h2 {
+					font-size: 40vw;
+					bottom: 20%;
+				}
 
 				&::after {
 					content: '';
@@ -162,6 +176,10 @@
 
 		.inner {
 			.wrap_men {
+				h2 {
+					font-size: 60vw;
+					bottom: 0;
+				}
 				article {
 					width: 100%;
 
