--- a/src/scss/main/_women.scss
+++ b/src/scss/main/_women.scss
@@ -2,6 +2,7 @@
 	width: 100%;
 	height: 100vh;
 	padding: 150px 0 50px;
+	overflow: hidden;
 
 	.inner {
 		width: 1180px;
@@ -21,6 +22,14 @@
 				right: 0;
 				top: 0;
 				writing-mode: vertical-rl;
+			}
+			h2 {
+				font: 30vw/1 'Bebas Neue';
+				color: rgba(238, 238, 238, 0.4);
+				position: absolute;
+				left: 20%;
+				bottom: 0;
+				z-index: -1;
 			}
 
 			article {
@@ -100,6 +109,12 @@
 					writing-mode: horizontal-tb;
 				}
 
+				h2 {
+					font-size: 40vw;
+					left: 30%;
+					bottom: 20%;
+				}
+
 				&::after {
 					content: '';
 					display: block;
@@ -161,6 +176,10 @@
 
 		.inner {
 			.wrap_women {
+				h2 {
+					font-size: 60vw;
+					bottom: 0;
+				}
 				article {
 					width: 100%;
 
