--- a/src/scss/sub/_about.scss
+++ b/src/scss/sub/_about.scss
@@ -77,6 +77,7 @@
 							width: 100%;
 							height: 100%;
 							object-fit: cover;
+							vertical-align: middle;
 						}
 					}
 					> .txt {
@@ -222,6 +223,7 @@
 					}
 					.pic {
 						width: 100%;
+						height: auto;
 					}
 				}
 			}
